# MoSer2

./: .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
cmake/: Findsqlite3.cmake
doc/: doxygenConfig
etc/: DiskPlugin.conf  LogWatcherPlugin.conf  cpu_charts.gp  debug_settings.conf  default_settings.conf  disk_charts.gp  load_charts.gp  logger.conf  logwatcher_charts.gp  mem_charts.gp  networkplugin_charts.gp  post_processor_AVAILABLE_UPDATES.sh  report_template.html
include/constants/: constants.hpp
include/core/: appsetup.hpp
include/dataprocessorhelper/: base64.hpp  settingshelper.hpp  tablecalchelper.hpp
include/imonitoringplugin/: CMakeLists.txt  constants.hpp  imonitorplugin.hpp  inputfilecontent.hpp  ipluginconfigselector.hpp  iplugindataprocessor.hpp  iplugindataprocessorcollection.hpp  plugindata.hpp  pluginexception.hpp  types.hpp
include/measurementpluginbase/: measurementpluginbase.hpp
include/monitoringpluginbase/: measurementpluginbase.hpp  monitorpluginbase.hpp  pluginconfigselector.hpp  plugindataprocessor.hpp  plugindataprocessorcollection.hpp  pluginexception.hpp
include/monitorplugin/: CMakeLists.txt  imonitorplugin.hpp  plugindata.hpp
include/persistenceservice/: AdapterTypes.hpp  adapterfactory.hpp  adaptersettings.hpp  idataadapter.hpp  persistencerunner.hpp
include/pluginmanager/: CMakeLists.txt  iplugin.hpp  pluginloader.hpp  pluginmanager.hpp
include/settingsprovider/: converters.hpp  isetting.hpp  isettingidentifier.hpp  isettingsprovider.hpp  settingidentifier.hpp  settingnotfoundexception.hpp  settingsfactory.hpp  settingsprovider.hpp  settingverifier.hpp  verifiers.hpp
src/confighelper/: CMakeLists.txt  main.cpp
src/constants/: CMakeLists.txt
src/constants/settings/: settingsidentifier.hpp
src/core/: CMakeLists.txt  appsetup.cpp
src/core/settings/: settingshelper.cpp
src/dataprocessorhelper/: CMakeLists.txt  base64.cpp  settingshelper.cpp  tablecalchelper.cpp
src/dataprocessorhelper/gnuplot/: gnuplotparameterdict.cpp  gnuplotwrapper.cpp
src/measurementpluginbase/: .CMakeLists.txt.swp  CMakeLists.txt  measurementpluginbase.cpp
src/monitoringpluginbase/: CMakeLists.txt  measurementpluginbase.cpp  monitorpluginbase.cpp  pluginconfigselector.cpp  plugindataprocessor.cpp  plugindataprocessorcollection.cpp  pluginexception.cpp
src/monitoringplugins/cpuplugin/: CMakeLists.txt  cpuplugin.cpp  cpupluginprocessors.cpp
src/monitoringplugins/diskplugin/: CMakeLists.txt  diskplugin.cpp  diskpluginhelper.cpp  diskpluginprocessors.cpp
src/monitoringplugins/loadplugin/: CMakeLists.txt  loadplugin.cpp  loadpluginprocessors.cpp
src/monitoringplugins/logwatcherplugin/: CMakeLists.txt  logwatcherplugin.cpp  logwatcherpluginprocessors.cpp
src/monitoringplugins/memoryplugin/: CMakeLists.txt  memoryplugin.cpp  memorypluginprocessors.cpp
src/monitoringplugins/networkplugin/: CMakeLists.txt  networkplugin.cpp  networkpluginprocessors.cpp
src/moser2/: CMakeLists.txt  main.cpp  monitoringserver.cpp  monitoringserver.hpp
src/moser2/plugin/: inputfileprovider.cpp  inputfileprovider.hpp  plugincontroller.cpp  plugincontroller.hpp  pluginfacade.cpp  pluginfacade.hpp
src/moser2/settings/: settingshelper.cpp  settingshelper.hpp  settingsidentifier.hpp
src/persistenceservice/: CMakeLists.txt  adapterfactory.cpp  adaptersettings.cpp  persistencerunner.cpp
src/persistenceservice/sqlite/: queryhelper.cpp  queryhelper.hpp  sqliteadapter.cpp  sqliteadapter.hpp  sqlitesettings.cpp
src/reporter/: CMakeLists.txt  main.cpp
src/reporter/datamodel/: processinformation.cpp  processinformation.hpp
src/reporter/email/: emailsender.cpp  emailsender.hpp
src/reporter/helper/: processinformationhelper.cpp  processinformationhelper.hpp
src/reporter/templateprocessor/: templateprocessor.cpp  templateprocessor.hpp  templatetoken.cpp  templatetoken.hpp  templatetokenfactory.cpp  templatetokenfactory.hpp
src/reporter/tokens/: datalesstokenfactory.cpp  datalesstokenfactory.hpp  processmemoryusage.cpp  processmemoryusage.hpp
src/reporter/viewmodel/: processinformationviewmodel.cpp  processinformationviewmodel.hpp
src/reporter/views/: HtmlTokens.hpp  processinformationviews.cpp  processinformationviews.hpp
src/settingsprovider/: CMakeLists.txt  converters.cpp  setting.hpp  settingidentifier.cpp  settingnotfoundexception.cpp  settingsfactory.cpp  settingsprovider.cpp  settingsprovider.hpp
src/utility/: CMakeLists.txt
src/utility/datastructure/: anyhelper.cpp  tablefilter.cpp
src/utility/filesystem/: fileaccesshelper.cpp
src/utility/helper/: stringhelper.cpp
src/utility/threading/: callbacktimer.cpp
test/cpuplugin/: CMakeLists.txt  cpuplugin_test.cpp
test/dataprocessorhelper/: CMakeLists.txt  base64encoder_test.cpp  gnuplotparameterdict_test.cpp  gnuplotwrapper_test.cpp  tablecalchelper_test.cpp
test/monitoringplugins/: CMakeLists.txt  configurationinjector.cpp  configurationinjector.hpp  cpuplugin_test.cpp  diskplugin_test.cpp  loadplugin_test.cpp  logwatcherplugin_test.cpp  main.cpp  memoryplugin_test.cpp  networkplugin_test.cpp
test/persistenceservice/: CMakeLists.txt  main.cpp  sqlite3adapter_test.cpp  sqlite3querybuilder_test.cpp
test/pluginmanager/: CMakeLists.txt  pluginloader_test.cpp  pluginmanager_test.cpp
test/pluginmanager/sample_lib/: CMakeLists.txt  HelloBase.hpp  hello.cpp  hello.hpp
test/reporter/: CMakeLists.txt  templateprocessor_test.cpp  templatetoken_test.cpp
test/settingsprovider/: CMakeLists.txt  settingsprovider_test.cpp
test/testdata/: DiskPlugin.conf  LogWatcherPlugin.conf  NetworkPlugin.conf  config_write.conf  cpuplugin_time_series_response_ref  diskplugin_time_series_response_ref  (+11 more)
test/utility/: CMakeLists.txt  main.cpp
test/utility/datastructure/: any_test.cpp  circularbuffer_test.cpp  table_test.cpp  tablefilter_test.cpp
test/utility/filesystem/: fileaccesshelper_test.cpp
test/utility/helper/: stringhelper_test.cpp
test/utility/threading/: callbacktimer_test.cpp
tools/: create_empty_plugin.sh  run_cpp_lint.sh
(+36 files in other folders)
