# Linkable target
add_library(IMonitorPlugin INTERFACE)

target_include_directories(IMonitorPlugin
INTERFACE
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include/imonitoringplugin>
)

install(TARGETS IMonitorPlugin
  ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR}/${PROJECT_NAME})
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/imonitoringplugin DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
