set(SOURCES
)
# Maybe this could become a interface library. who knows...
ADD_LIBRARY(Constants INTERFACE) # STATIC ${SOURCES})
target_link_libraries(Constants INTERFACE SettingsProvider)

target_include_directories(Constants
INTERFACE
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include/constants>
)

install(TARGETS Constants
  ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR}/${PROJECT_NAME})
install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/constants DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
